src/components/Forms/NewRequestForm/NewRequestForm.scss
/* ... */
  .request-submit-area {
    align-content: center;
    margin-bottom: 20px;
    width: 79%;
    .bg-btn--active {
      margin-left: 111%;
    }
  }
  .width-91{
    width: 91.5%;
  }
  .trip__detail-row{
    padding: 0;
    margin: 10px 0px 20px 0px;
    list-style: none;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-flow: row wrap;
    flex-flow:row wrap;
    justify-content: flex-start;
  }
  .trip__detail-col{
    flex:0,0, 50%;
    width: 50%;
  }
.reasons__dropdown{
    .select-menu{
          margin-top:10px!important;
          z-index:10
    }
}

.other__reason{
    margin-right: 20px;
    position: relative;
    width: 400px;
    @media (max-width: 450px) {
        width: 100%;
    }
    .form-input{
        label{
            display:none!important;
        }
    }
    .character__conditions{
        position: absolute;
        top:49px;
        right: 7px;
        height: 15px;		
        font-family: "DIN Pro";	
        font-size: 12px;	
        line-height: 15px;
    }
}
.reasons__option{
    .form-input{
        margin-bottom: 5px;
    }
}
.bed__option{
    .form-input{
        margin-bottom: 5px;
    }
}
.trip-heading-rectangle {
  height: 26px;
  width: 53px;
  border: 1px solid #3359DB;
  border-radius: 8px;
  margin-left: 10px;
  padding: 3px 0 0 10px;
  color: #3359DB;
}
.trip-heading-line {
  box-sizing: border-box;
  height: 2px;
  width: 319px;
  border: 1px solid #3359DB;
  margin-left: 53px;
  margin-top: -8px
}
.request-submit-area button:disabled {
  background-color: rgba(51, 89, 219, 0.3);
  border: none;
  color: #FFFFFF;
  cursor: not-allowed;
}

.travel-checklist__tab {
  margin-top: 26px;
  margin-bottom: 45px;
  display: flex;
  justify-content: space-between;
}
.travel-checklist-line {
  box-sizing: border-box;	
  height: 1px;	
  width: 100%;	
  border: 1px solid #E4E4E4;
  margin-left: 30px
}
.pending-approvals-line {
  box-sizing: border-box;	
  height: 1px;	
  width: 100%;	
  border: 1px solid #E4E4E4;
  margin-left: 30px
}
.travel-checklist-rectangle {
  height: 353px;
  width: 594px;
  border: 1px solid #E4E4E4;	
  border-radius: 6px;	
  background-color: #FFFFFF;
  overflow-y: scroll
}
.pending-approvals-rectangle {
  height: 353px;
  width: 394px;
  margin-left: 9px;
  border: 1px solid #E4E4E4;	
  border-radius: 6px;	
  background-color: #FFFFFF;
  overflow-y: scroll
}
.travel-checklist-text {	
  height: 18px;	
  width: 243px;	
  color: #4F4F4F;	
  font-family: "DIN Pro";	
  font-size: 14px;	
  line-height: 18px;	
  text-align: center;
  margin: 22px 176.5px 13px 174.5px
}
.pending-approvals-text {	
  height: 18px;	
  width: 226px;	
  color: #4F4F4F;	
  font-family: "DIN Pro";	
  font-size: 14px;	
  line-height: 18px;	
  text-align: center;
  margin: 22px 176.5px 13px 84px
}
.travel-checklist__submit-area  {
  margin-top: -30px;
  .submit-area {
      margin-left: 45px
  }
}
.pending-approvals-block {	
  height: 90px;	
  width: 184px;	
  color: #4A4A4A;	
  font-family: "DIN Pro";	
  font-size: 14px;	
  font-weight: 500;	
  line-height: 18px;
  .approval-list-items {
    display: flex;
    flex-direction: column;
    margin-top: 2.5em;
    width: 180%;
    .approval-item {
      display: flex;
      justify-content: flex-start;
      align-content: center;
      .oval{
        margin-top: .7em;
        margin-right: .6em;
      }
    }
  }
}
.travel-checklist-items__group {	
  height: 126px;	
}
.travel-checklist-items {	
  height: 126px;	
  color: #4A4A4A;	
  font-family: "DIN Pro";	
  font-size: 14px;	
  font-weight: 500;	
  line-height: 18px;
  margin: 30px 21px 180px 67px
}

.oval {	
  height: 7px;	
  width: 7px;	
  background-color: #3359DB;
  border-radius: 50px;
}
.submit__area-border {
  border-top: 1px solid #DFE3E8;
  .submit-area {
      width: 100%!important;
      justify-content:space-between!important;
  }
}
.room-dropdown {
  div {
    div {
      .select-menu::-webkit-scrollbar {
        -webkit-appearance: none;
        width: 7px;
      }
      .select-menu::-webkit-scrollbar-thumb {
        border-radius: 4px;
        background-color: rgba(0,0,0,.5);
        -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
        box-shadow: 0 0 1px rgba(255,255,255,.5);
      }      
    }
  }
}
.editrequest-details__comments{
  margin-top: 22px;
  margin-bottom: 78px;
}
.editRequest-comment__toggle{
  width: 59%;
}
.editRequest__add-comment{
  margin-bottom: 33px;
  span:hover {
    cursor: pointer;
  }
  img {
    margin-right: 10px;
  }
}

